--- a/components/molecules/headder.html
+++ b/components/molecules/headder.html
@@ -1,8 +1,6 @@
 <div class="border p-4 flex justify-between items-center bg-gray-200">
   <div>
-    <h1 class="text-2xl font-semibold">John Doe</h1>
-    <p class="mt-2 italic">
-      Web Developer with 5+ years of experience in modern web technologies.
-    </p>
+    <h1 class="text-2xl font-semibold">{{ .Name}}</h1>
+    <p class="mt-2 italic">{{ .Profession}}</p>
   </div>
 </div>
