--- a/components/molecules/headder.html
+++ b/components/molecules/headder.html
@@ -1,6 +1,56 @@
-<div class="border p-4 flex justify-between items-center bg-gray-200">
-  <div>
-    <h1 class="text-2xl font-semibold">{{ .Name}}</h1>
-    <p class="mt-2 italic">{{ .Profession}}</p>
+<div class="border p-6 shadow-md rounded-lg bg-white">
+  <!-- Header with gradient background -->
+  <div class="p-4 text-black rounded-lg mb-4">
+    <div class="flex justify-between items-center">
+      <div>
+        <h1 class="text-4xl font-bold tracking-tight">{{ .Name }}</h1>
+        <p class="mt-1 text-xl font-light italic">{{ .Profession }}</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- Contact Info -->
+  <div class="mt-4 space-y-2 mb-6">
+    <h2 class="text-2xl font-semibold text-gray-700 mb-2">Contacts</h2>
+    <div class="flex items-center text-gray-700">
+      <i class="fas fa-envelope mr-2"></i>
+      <span>Email: {{.Contact.Email}}</span>
+    </div>
+    <div class="flex items-center text-gray-700">
+      <i class="fas fa-map-marker-alt mr-2"></i>
+      <span>Location: {{.Contact.Location}}</span>
+    </div>
+    <div class="flex items-center text-gray-700">
+      <i class="fab fa-linkedin mr-2"></i>
+      <a
+        href="https://{{.Contact.Linkedin}}"
+        class="text-blue-600 hover:underline"
+      >
+        {{.Contact.Linkedin}}
+      </a>
+    </div>
+    <div class="flex items-center text-gray-700">
+      <i class="fas fa-phone-alt mr-2"></i>
+      <span>Phone: {{.Contact.Phone}}</span>
+    </div>
+    <div class="flex items-center text-gray-700">
+      <i class="fas fa-briefcase mr-2"></i>
+      <a
+        href="https://{{.Contact.Portfolio}}"
+        class="text-blue-600 hover:underline"
+      >
+        {{.Contact.Portfolio}}
+      </a>
+    </div>
+  </div>
+
+  <!-- Skills -->
+  <div class="mb-4">
+    <h2 class="text-2xl font-semibold text-gray-700 mb-2">Skills</h2>
+    <ul class="list-disc ml-6 text-gray-600">
+      {{ range .Skills.Technologies }}
+      <li>{{ . }}</li>
+      {{ end }}
+    </ul>
   </div>
 </div>
