--- a/components/molecules/headder.html
+++ b/components/molecules/headder.html
@@ -1,30 +1,28 @@
-<div class="border p-6 shadow-lg rounded-lg bg-gray-50">
+<div class="p-1 text-xs shadow-lg">
   <!-- Header -->
-  <div class="p-4 bg-gray-100 rounded-lg mb-6">
+  <div class="p-4 bg-gray-100 rounded-lg mb-1">
     <div class="flex justify-between items-center">
       <div>
-        <h1 class="text-4xl font-extrabold tracking-tight text-gray-800">
-          {{ .Name }}
-        </h1>
-        <p class="mt-2 text-xl font-medium text-gray-600">{{ .Profession }}</p>
+        <h1 class="font-extrabold tracking-tight text-gray-800">{{ .Name }}</h1>
+        <p class="mt-2 font-medium text-gray-600">{{ .Profession }}</p>
       </div>
     </div>
   </div>
 
   <!-- Contacts Section -->
-  <div class="p-4 bg-white shadow rounded-lg mb-6">
-    <h2 class="text-2xl font-semibold text-gray-800 mb-5">Contacts</h2>
+  <div class="p-1 bg-white shadow rounded-lg mb-6">
+    <h2 class="font-semibold text-gray-800 mb-5">Contacts</h2>
     <div class="space-y-4">
       <!-- Email -->
       <div class="flex items-center text-gray-700">
         <i class="fas fa-envelope text-lg text-indigo-600 mr-3"></i>
-        <span class="text-sm">Email: {{.Contact.Email}}</span>
+        <span>Email: {{.Contact.Email}}</span>
       </div>
 
       <!-- Location -->
       <div class="flex items-center text-gray-700">
         <i class="fas fa-map-marker-alt text-lg text-red-600 mr-3"></i>
-        <span class="text-sm">Location: {{.Contact.Location}}</span>
+        <span>Location: {{.Contact.Location}}</span>
       </div>
 
       <!-- LinkedIn -->
@@ -32,7 +30,7 @@
         <i class="fab fa-linkedin text-lg text-blue-600 mr-3"></i>
         <a
           href="https://{{.Contact.Linkedin}}"
-          class="text-blue-700 hover:underline text-sm"
+          class="text-blue-700 hover:underline"
         >
           {{.Contact.Linkedin}}
         </a>
@@ -41,15 +39,15 @@
       <!-- Phone -->
       <div class="flex items-center text-gray-700">
         <i class="fas fa-phone-alt text-lg text-green-600 mr-3"></i>
-        <span class="text-sm">Phone: {{.Contact.Phone}}</span>
+        <span>Phone: {{.Contact.Phone}}</span>
       </div>
 
       <!-- Portfolio -->
       <div class="flex items-center text-gray-700">
-        <i class="fas fa-briefcase text-lg text-yellow-600 mr-3"></i>
+        <i class="fas fa-briefcase text-yellow-600 mr-3"></i>
         <a
           href="https://{{.Contact.Portfolio}}"
-          class="text-blue-700 hover:underline text-sm"
+          class="text-blue-700 hover:underline"
         >
           {{.Contact.Portfolio}}
         </a>
@@ -59,11 +57,11 @@
 
   <!-- Skills Section -->
   <div class="p-4 bg-white shadow rounded-lg">
-    <h2 class="text-2xl font-semibold text-gray-800 mb-5">Skills</h2>
-    <ul class="pl-6 space-y-3">
+    <h2 class="font-semibold text-gray-800 mb-5">Skills</h2>
+    <div class="p-1 grid grid-cols-4 gap-1">
       {{ range .Skills.Technologies }}
-      <li class="list-disc text-gray-700 text-lg">{{ . }}</li>
+      <div class="text-white p-1 text-center rounded bg-blue-400">{{ . }}</div>
       {{ end }}
-    </ul>
+    </div>
   </div>
 </div>
