--- a/components/molecules/section.html
+++ b/components/molecules/section.html
@@ -1,14 +1,14 @@
 <div
   id="section-{{ .Title }}"
-  class="bg-gray-50 p-6 rounded-lg shadow-md mb-8 hover:shadow-2xl border border-gray-200 hover:border-gray-300"
+  class="text-xs bg-gray-50 p-1 rounded-lg shadow-md mb-8 hover:shadow-2xl border border-gray-200 hover:border-gray-300"
 >
   <!-- Section Header with Underline -->
-  <div class="border-b-4 border-indigo-500 pb-3 mb-5">
-    <h2 class="text-3xl font-extrabold tracking-tight text-gray-800">
-      {{ .Title }}
-    </h2>
+  <div class="border-b-4 border-indigo-500">
+    <h2 class="font-extrabold tracking-tight text-gray-800">{{ .Title }}</h2>
   </div>
 
   <!-- Section Content -->
-  <div class="prose prose-lg text-gray-800 space-y-4">{{ .Content }}</div>
+  <div class="prose prose-lg text-gray-800 flex flex-col p-1">
+    {{ .Content }}
+  </div>
 </div>
