--- a/components/molecules/section.html
+++ b/components/molecules/section.html
@@ -1,6 +1,6 @@
 <div
   id="section-{{ .Title }}"
-  class="text-xs bg-gray-50 p-1 rounded-lg shadow-md mb-8 hover:shadow-2xl border border-gray-200 hover:border-gray-300"
+  class="text-xs bg-gray-50 p-1 rounded-lg shadow-md hover:shadow-2xl border border-gray-200 hover:border-gray-300"
 >
   <!-- Section Header with Underline -->
   <div class="border-b-4 border-indigo-500">
