--- a/components/atoms/experience.html
+++ b/components/atoms/experience.html
@@ -1,27 +1,25 @@
 <div
   id="experience-{{ .Title }}"
-  class="bg-gray-50 p-6 text-xs rounded-lg shadow-md transition-transform transform hover:scale-105 hover:shadow-2xl border border-gray-300"
+  class="bg-gray-50 text-xs p-3 rounded-lg shadow-md transition-transform transform hover:scale-105 hover:shadow-2xl border border-gray-300"
 >
   <!-- Experience Title -->
-  <h3 class="font-semibold tracking-tight text-indigo-700 mb-4">
-    {{ .Title }}
-  </h3>
+  <h3 class="font-semibold tracking-tight text-indigo-700">{{ .Title }}</h3>
 
   <!-- Company and Duration -->
-  <div class="flex items-center text-gray-700 mb-5">
-    <span class="font-bold text-gray-800 mr-2">{{ .Company }}</span>
-    <span class="text-xs bg-indigo-100 px-3 py-1 rounded-full text-indigo-600"
+  <div class="flex flex-col w-fit text-gray-700">
+    <span class="font-bold text-gray-800 p-2">{{ .Company }}</span>
+    <span class="text-xs bg-indigo-100 rounded-full text-indigo-600 p-2"
       >{{ .StartYear }} - {{ .EndYear }}</span
     >
   </div>
 
   <!-- Description -->
-  <p class="text-gray-700 leading-relaxed mb-5">{{ .Description }}</p>
+  <p class="text-gray-700 leading-relaxed">{{ .Description }}</p>
 
   <!-- Achievements -->
   {{ if .Achievements }}
   <div class="mt-5 bg-indigo-50 rounded p-4 border-l-4 border-indigo-500">
-    <p class="font-semibold text-gray-800 mb-3">Achievements:</p>
+    <p class="font-semibold text-gray-800">Achievements:</p>
     <ul class="text-xs list-disc ml-6 text-gray-700">
       {{ range .Achievements }}
       <li>{{ . }}</li>
